--- a/Disputes.html
+++ b/Disputes.html
@@ -30,7 +30,8 @@
     </nav>
   </header>
 
-  <section class="disputes">
+  <section class="tax-disputes">
+    <div class="dispute">
     <h2>Tax Disputes & Resolution</h2>
     <p>From IRS audits and back taxes to levies and liens, I represent clients in all types of tax disputes. I negotiate directly with tax authorities to reduce liabilities, settle disputes, and protect your financial standing.</p>
     <ul>
@@ -39,32 +40,37 @@
       <li>Offer in Compromise</li>
       <li>Penalty Abatement</li>
     </ul>
+  </div>
   </section>  
 
   <div class="card-container">
-        <div class="card">
-            <h2>Our Mission</h2>
-            <p>We strive to provide the best tax solutions for our clients, focusing on accuracy and efficiency.</p>
-        <a href="" class="btn">Read More</a>
-          </div>
-        <div class="card 2">
-            <h2>Our Team</h2>
-            <p>We have a team of experienced tax attorneys dedicated to helping you navigate complex tax laws.</p>
-            <a href="" class="btn">Read More</a>
-          </div>
-        <div class="card 3">
-            <h2>Our History</h2>
-            <p>Founded in 2005, we have been serving clients with integrity and professionalism for over 15 years.</p>
-            <a href="" class="btn">Read More</a>
-          </div>
+    <div class="card">
+      <h2>IRS Audit Defense</h2>
+      <p>Representation and support throughout IRS audits to protect your rights and finances.</p>
+      <a href="" class="btn">Read More</a>
+    </div>
+    <div class="card">
+      <h2>Appeals & Negotiations</h2>
+      <p>Challenging IRS decisions and negotiating settlements through formal appeals.</p>
+      <a href="" class="btn">Read More</a>
+    </div>
+    <div class="card">
+      <h2>Penalty Relief</h2>
+      <p>Reducing or removing IRS penalties due to reasonable cause or first-time relief.</p>
+      <a href="" class="btn">Read More</a>
+    </div>
     </div>
 
   <footer class="site-footer">
     <div class="footer-top">
       <h3>Manage All Your Legal Services in One Place</h3>
-      <div class="app-buttons">
-        <a href="#"><img src="images/appstore.png" alt="App Store"></a>
-        <a href="#"><img src="images/googleplay.png" alt="Google Play"></a>
+      <div class="store-buttons">
+        <a href="https://apps.apple.com" target="_blank">
+          <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download on the App Store" class="store-badge" />
+        </a>
+        <a href="https://play.google.com/store" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Get it on Google Play" class="store-badge" />
+        </a>
       </div>
     </div>
   
