--- a/About.html
+++ b/About.html
@@ -33,18 +33,18 @@
   <section class="about">
     <div class="about-section-container">
       
-      </div>
       <div class="about-text-content">
           <h2>About Thomas Northman</h2>
           <p>I'm a licensed Tax Attorney with over 20 years of experience helping individuals, families, and businesses navigate complex tax matters with confidence. My mission is to provide practical, strategic, and personalized tax solutions for every client.</p>
         </div>
-  </div>
-  </section>
 
+  </div> 
   <div class="about-image-container">
-    <img src="images/Law.jpg" alt="Hummer image">
+    <img src="images/Tax Attorney.jpg" alt="Tax Attorney Image">
   
 </div>
+  </section>
+
 <div class="card-container">
         <div class="card">
             <h2>Our Mission</h2>
@@ -80,9 +80,13 @@
   <footer class="site-footer">
     <div class="footer-top">
       <h3>Manage All Your Legal Services in One Place</h3>
-      <div class="app-buttons">
-        <a href="#"><img src="images/appstore.png" alt="App Store"></a>
-        <a href="#"><img src="images/googleplay.png" alt="Google Play"></a>
+      <div class="store-buttons">
+        <a href="https://apps.apple.com" target="_blank">
+          <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download on the App Store" class="store-badge" />
+        </a>
+        <a href="https://play.google.com/store" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Get it on Google Play" class="store-badge" />
+        </a>
       </div>
     </div>
   
