--- a/Contact.html
+++ b/Contact.html
@@ -30,22 +30,27 @@
     </nav>
   </header>
 
-  <section class="contact">
-    <h2>Contact</h2>
-    <p>Let's talk about your tax concerns. Reach out to schedule your free consultation today.</p>
-    <ul>
-      <li>Email: <a href="mailto:thomas@northmantaxlaw.com">thomas@northmantaxlaw.com</a></li>
-      <li>Phone: <a href="tel:+254708843777">(254) 708843777</a></li>
-      <li>Office: Nairobi, 123 Vic Rd, ABC Towers</li>
-    </ul>
-  </section>
+  <section class="contact-section" id="contact">
+    <h2>Contact Us</h2>
+    <p>We’d love to hear from you. Please fill out the form below and we’ll get back to you shortly.</p>
+    <form class="contact-form">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+    </form>
+</section>
 
   <footer class="site-footer">
     <div class="footer-top">
       <h3>Manage All Your Legal Services in One Place</h3>
-      <div class="app-buttons">
-        <a href="#"><img src="images/appstore.png" alt="App Store"></a>
-        <a href="#"><img src="images/googleplay.png" alt="Google Play"></a>
+      <div class="store-buttons">
+        <a href="https://apps.apple.com" target="_blank">
+          <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download on the App Store" class="store-badge" />
+        </a>
+        <a href="https://play.google.com/store" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Get it on Google Play" class="store-badge" />
+        </a>
       </div>
     </div>
   
