--- a/International.html
+++ b/International.html
@@ -41,12 +41,35 @@
     </ul>
   </section>
 
+  <div class="card-container">
+    <div class="card">
+      <h2>FBAR Filing</h2>
+      <p>Assistance with reporting foreign bank accounts to avoid harsh penalties.</p>
+      <a href="" class="btn">Read More</a>
+    </div>
+    <div class="card">
+      <h2>Foreign Income Reporting</h2>
+      <p>Ensure proper disclosure of income earned abroad to stay compliant.</p>
+      <a href="" class="btn">Read More</a>
+    </div>
+    <div class="card">
+      <h2>Cross-Border Tax Planning</h2>
+      <p>Optimize tax outcomes for expatriates and multinational business owners.</p>
+      <a href="" class="btn">Read More</a>
+    </div>
+  </div>
+  
+
   <footer class="site-footer">
     <div class="footer-top">
       <h3>Manage All Your Legal Services in One Place</h3>
-      <div class="app-buttons">
-        <a href="#"><img src="images/appstore.png" alt="App Store"></a>
-        <a href="#"><img src="images/googleplay.png" alt="Google Play"></a>
+      <div class="store-buttons">
+        <a href="https://apps.apple.com" target="_blank">
+          <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download on the App Store" class="store-badge" />
+        </a>
+        <a href="https://play.google.com/store" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Get it on Google Play" class="store-badge" />
+        </a>
       </div>
     </div>
   
