--- a/Rates & Fees.html
+++ b/Rates & Fees.html
@@ -40,13 +40,42 @@
       <li>Flexible Payment Plans Offered</li>
     </ul>
   </section>
+
+  <section class="card-container">
+    <div class="card">
+      <h2>Initial Consultation</h2>
+      <p>Free 30-minute strategy session to understand your tax challenges and goals.</p>
+      <a href="" class="btn">Read More</a>
+    </div>
+    <div class="card">
+      <h2>Hourly Rate</h2>
+      <p>Competitive hourly rates with detailed billing and transparent timelines.</p>
+      <a href="" class="btn">Read More</a>
+    </div>
+    <div class="card">
+      <h2>Flexible Payment Plans</h2>
+      <p>Allow consumers to purchase items immediately and pay for them in installments.</p>
+      <a href="" class="btn">Read More</a>
+    </div>
+    <div class="card">
+      <h2>Flexible Payment Plans</h2>
+      <p>Allow consumers to purchase items immediately and pay for them in installments.</p>
+      <a href="" class="btn">Read More</a>
+    </div>
+    
+  </section>
+  
   
   <footer class="site-footer">
     <div class="footer-top">
       <h3>Manage All Your Legal Services in One Place</h3>
-      <div class="app-buttons">
-        <a href="#"><img src="images/appstore.png" alt="App Store"></a>
-        <a href="#"><img src="images/googleplay.png" alt="Google Play"></a>
+      <div class="store-buttons">
+        <a href="https://apps.apple.com" target="_blank">
+          <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download on the App Store" class="store-badge" />
+        </a>
+        <a href="https://play.google.com/store" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Get it on Google Play" class="store-badge" />
+        </a>
       </div>
     </div>
   
