--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@
   <footer class="site-footer">
     <div class="footer-top">
       <h3>Manage All Your Legal Services in One Place</h3>
-      <div class="app-buttons">
-        <a href="#"><img src="images/appstore.png" alt="App Store"></a>
-        <a href="#"><img src="images/googleplay.png" alt="Google Play"></a>
+      <div class="store-buttons">
+        <a href="https://apps.apple.com" target="_blank">
+          <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download on the App Store" class="store-badge" />
+        </a>
+        <a href="https://play.google.com/store" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Get it on Google Play" class="store-badge" />
+        </a>
       </div>
     </div>
   
@@ -115,7 +119,9 @@
         <a href="#"><i class="fab fa-x-twitter"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
+      <div class="p footer">
       <p>&copy; 2025 Thomas Northman, Tax Attorney. All rights reserved.</p>
+      </div>
     </div>
   </footer>  
 
